# yciiwallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/images/: cryptonote.icns
